--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                         </div>
                     </div>
                     <div class="gallery col-12 col-md-6">
-                        <video controls  muted  width="100%" height="560">
+                        <video controls  muted  width="100%" height="560" poster="./assets/images/_79e73e18-5124-410a-8bda-e4cbdb1198bc-removebg-preview.png">
                             <source src="./assets/videos/Ayuno.mp4" type="video/mp4">
                             <p>Ayuno Intermitente</p>
                           </video>
