--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                                 <div class="left align-self-center text-center text-md-left">
                                     <h1 data-aos="zoom-out-up" data-aos-delay="400" class="title effect-static-text">Eleva tu poder masculino</h1>
                                     <p data-aos="zoom-out-up" data-aos-delay="800" class="description">Potencia tu vida en fitness, Inteligencia social y seducción.</p>
-                                    <a href="https://academia-zen-masculino.teachable.com/?affcode=1803416_icqqcfmb" data-aos="zoom-out-up" data-aos-delay="1200" class="ml-auto mr-auto ml-md-0 mt-4 btn dark-button"><i class="icon-cup"></i>Empieza ahora</a>
+                                    <a href="https://academia-zen-masculino.teachable.com/?affcode=1803416_icqqcfmb" data-aos="zoom-out-up" data-aos-delay="1200" class="ml-auto mr-auto ml-md-0 mt-4 btn dark-button"></i>Empieza ahora</a>
                                 </div>
                             </div>
                         </div>
