--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             <div class="container mb-2">
                 <div  class="row">
                     <div class="gallery col-12 col-md-6">
-                        <video controls  muted  width="100%" height="560" poster="./assets/images/videoacademia.jpg">
+                        <video controls  muted  width="100%" height="560"  playsinline  poster="./assets/images/videoacademia.jpg">
                             <source src="./assets/videos/Mision.mp4" type="video/mp4">
                             <p>Academia</p>
                           </video>
@@ -281,7 +281,7 @@
                         </div>
                     </div>
                     <div class="gallery col-12 col-md-6">
-                        <video controls  muted  width="100%" height="560" poster="./assets/images/video23.jpg">
+                        <video controls  muted  width="100%" height="560"  playsinline poster="./assets/images/video23.jpg">
                             <source src="./assets/videos/Ayuno.mp4" type="video/mp4">
                             <p>Ayuno Intermitente</p>
                           </video>
@@ -446,40 +446,7 @@
             </div>
         </section>
 
-        <!-- Subscribe -->
-        <section id="subscribe" class="section-6 odd subscribe">
-            <div class="container smaller">
-                <div class="row text-center intro">
-                    <div class="col-12">
-                        <h2>Boletín informativo</h2>
-                        <p class="text-max-800">Suscríbete a nuestro boletín y sigue de cerca nuestro contenido. Recibe noticias basadas en lo que te concierne. Prometemos no enviar promociones que no te gusten.</p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 p-0">
-                        <form action="php/form.php" id="leverage-subscribe" class="row m-auto items">
-                            <input type="hidden" name="section" value="leverage_subscribe">
-
-                            <input type="hidden" name="reCAPTCHA">
-                        
-
-                            <div class="col-12 col-lg-5 m-lg-0 input-group align-self-center item">
-                                <input type="text" name="name" class="form-control field-name" placeholder="Name">
-                            </div>
-                            <div class="col-12 col-lg-5 m-lg-0 input-group align-self-center item">
-                                <input type="email" name="email" class="form-control field-email" placeholder="Email">
-                            </div>
-                            <div class="col-12 col-lg-2 m-lg-0 input-group align-self-center item">
-                                <a class="btn primary-button w-100">Suscribete</a>
-                            </div>
-                            <div class="col-12 text-center">
-                                <span class="form-alert mt-5 mb-0"></span>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </section>
+       
 
         <!-- 
         <section id="contact" class="section-7 odd form featured">
