--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
             <div class="container">
                 <div class="row text-center intro">
                     <div class="col-12">
-                        <h2>Planes y precios</h2>
+                        <h2 style="color:#ffffff;">Planes y precios</h2>
                         <p class="text-max-800">Elige el plan ideal para lo que necesitas. Trabajamos con precios asequibles para todos.</p>
                     </div>
                 </div>
