--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                         </div>
                     </div>
                     <div class="gallery col-12 col-md-6">
-                        <video autoplay muted  width="100%" height="560"   poster="./assets/images/videoacademia.jpg">
+                        <video autoplay muted  playsinline width="100%" height="560"   poster="./assets/images/videoacademia.jpg">
                             <source src="./assets/videos/Mision.mp4" type="video/mp4">
                             <p>Academia</p>
                           </video>
@@ -282,7 +282,7 @@
                         </div>
                     </div>
                     <div class="gallery col-12 col-md-6">
-                        <video autoplay muted  width="100%" height="560" poster="./assets/images/video23.jpg">
+                        <video autoplay muted  playsinline width="100%" height="560" poster="./assets/images/video23.jpg">
                             <source src="./assets/videos/Ayuno.mp4" type="video/mp4">
                             <p>Ayuno Intermitente</p>
                           </video>
