--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@
         </style>
         
     </head>
-
+    <style>
+        #header{
+           position: sticky;
+        }
+    </style>
     <body class="home theme-mode-dark">
 
         <!-- Header -->
