--- a/index.html
+++ b/index.html
@@ -64,21 +64,21 @@
             
                 --footer-bg-color: #191919;
             }
+            .navbarr{
+                    background-color: transparent;
+                      transition: background-color 0.3s ease; /* Esta transición hará que el cambio de color sea suave */
+                 }
         </style>
         
     </head>
-    <style>
-        #header{
-           position: sticky;
-        }
-    </style>
+   
     <body class="home theme-mode-dark">
 
         <!-- Header -->
-        <header id="header">
+        <header  class="navbarr"  id="header">
 
             <!-- Navbar -->
-            <nav data-aos="zoom-out" data-aos-delay="800" class="navbar navbar-expand">
+            <nav  data-aos="zoom-out" data-aos-delay="800" class="navbar navbar-expand">
                 <div class="container header">
 
                     <!-- Navbar Brand-->
