--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@ window.addEventListener('scroll', function() {
             <div class="container">
                 <div class="row text-center intro">
                     <div class="col-12">
-                        <h2>Nuestros  número</h2>
+                        <h2>Cada día somos más.</h2>
                         <p class="text-max-800">Nuestro rápido crecimiento se debe a la calidad y dedicación que hemos puesto en nuestro contenido.</p>
                     </div>
                 </div>
