--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
         <title>Academia ETM</title>
 
-        <meta name="description" content="Creative Agency, Portfolio, Corporate, Startup & Technology">
-        <meta name="subject" content="Creative Agency, Portfolio, Corporate, Startup & Technology">
-        <meta name="author" content="Codings">
+        <meta name="description" content="Educacion">
+        <meta name="subject" content="Descubre cómo construir relaciones auténticas y significativas en el mundo moderno">
+        <meta name="author" content="ETM">
 
         <!-- ==============================================
         Favicons
