--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <title>Academia ETM</title>
 
-        <meta name="description" content="Educacion">
+        <meta name="description" content="Educación">
         <meta name="subject" content="Descubre cómo construir relaciones auténticas y significativas en el mundo moderno">
         <meta name="author" content="ETM">
 
