--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
         <title>Academia ETM</title>
 
-        <meta name="description" content="Educación">
-        <meta name="subject" content="Descubre cómo construir relaciones auténticas y significativas en el mundo moderno">
+        <meta name="description" content="Descubre cómo construir relaciones auténticas y significativas en el mundo moderno">
+        <meta name="subject" content="Educación">
         <meta name="author" content="ETM">
 
         <!-- ==============================================
