--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <title>Academia ETM</title>
 
-        <meta name="description" content="Descubre cómo construir relaciones auténticas y significativas en el mundo moderno">
+        <meta name="description" content="Potencia tus habilidades de seducción y fitness,  conviértete en la mejor versión de ti mismo.">
         <meta name="subject" content="Educación">
         <meta name="author" content="ETM">
 
